# cirrus

./: .editorconfig  .gitignore  Cargo.toml  ROADMAP.md  opencode.jsonc  skills-lock.json
.beads/: issues.jsonl  metadata.json
.specs/brainstorm/: cirrus_brainstorm.md
.specs/version/v0.1.0/: cirrus_v0.1.0_brainstorm.md  cirrus_v0.1.0_implementation_plan.md  cirrus_v0.1.0_spec.md
crates/cirrus-protocol/: Cargo.toml
crates/cirrus-protocol/src/: error.rs  lib.rs  types.rs  xml.rs
crates/cirrus-router/: Cargo.toml
crates/cirrus-router/src/: address.rs  lib.rs  middleware.rs  service.rs
crates/cirrus-s3/: Cargo.toml
crates/cirrus-s3/src/: address.rs  handlers.rs  lib.rs  multipart.rs  service.rs  storage.rs
crates/cirrus-server/: Cargo.toml
crates/cirrus-server/src/: main.rs
