[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Cirrus Contributors"]
license = "MIT"
repository = "https://github.com/cirrus-io/cirrus"

[workspace.dependencies]
tokio = { version = "1.43", features = ["rt", "rt-multi-thread", "net", "macros", "signal", "time", "fs"] }
axum = "0.8"
hyper = { version = "1.6", features = ["http1", "server"] }
http = "1.3"
http-body = "1.0"
http-body-util = "0.1"
bytes = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
quick-xml = { version = "0.37", features = ["serialize"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
md-5 = "0.10"
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1.15", features = ["v4"] }
thiserror = "2.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4.5", features = ["derive"] }
figment = { version = "0.10", features = ["env"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "limit"] }
urlencoding = "2.1"

# Workspace-local crate dependencies (path-based, for workspace inheritance)
cirrus-protocol = { path = "crates/cirrus-protocol" }
cirrus-s3 = { path = "crates/cirrus-s3" }
cirrus-router = { path = "crates/cirrus-router" }

# Dev-only dependencies (crates use these in their [dev-dependencies] sections)
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1.5"
