[package]
name = "cirrus-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
quick-xml.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true
http.workspace = true
uuid.workspace = true
sha2.workspace = true
base64.workspace = true
md-5.workspace = true
urlencoding.workspace = true
