[package]
name = "cirrus-router"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cirrus-protocol.workspace = true
tokio.workspace = true
axum.workspace = true
hyper.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
bytes.workspace = true
async-trait.workspace = true
dashmap.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
urlencoding.workspace = true
serde.workspace = true
uuid.workspace = true
