[package]
name = "cirrus-s3"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cirrus-protocol.workspace = true
cirrus-router.workspace = true
tokio.workspace = true
axum.workspace = true
dashmap.workspace = true
bytes.workspace = true
chrono.workspace = true
serde.workspace = true
quick-xml.workspace = true
thiserror.workspace = true
async-trait.workspace = true
md-5.workspace = true
http.workspace = true
uuid.workspace = true
tracing.workspace = true
urlencoding.workspace = true

[dev-dependencies]
proptest.workspace = true
http-body.workspace = true
