[package]
name = "cirrus-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cirrus-router.workspace = true
cirrus-s3.workspace = true
cirrus-protocol.workspace = true
tokio.workspace = true
axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
figment.workspace = true
http.workspace = true
bytes.workspace = true
